@@ -28,7 +28,7 @@ dependencies {
 
 application {
 	mainClass = 'com.jyuzawa.onnxruntime_benchmark.Benchmark'
-	applicationDefaultJvmArgs = ['--enable-preview', '--enable-native-access=ALL-UNNAMED']
+	applicationDefaultJvmArgs = ['--enable-native-access=ALL-UNNAMED']
 }
 
 task benchmark(type: Exec) {
